name:                peer-discovery
version:             0.1.0.0
synopsis:            Peer discovery protocol based on Kademlia
-- description:
license:             BSD3
license-file:        LICENSE
author:              Andrzej Rybczak
maintainer:          andrzej@rybczak.net
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Network.PeerDiscovery
                       Network.PeerDiscovery.Communication
                       Network.PeerDiscovery.Communication.Method
                       Network.PeerDiscovery.Operations
                       Network.PeerDiscovery.Routing
                       Network.PeerDiscovery.Types
                       Network.PeerDiscovery.Util
                       Network.PeerDiscovery.Workers

  build-depends:       base < 5,
                       async,
                       bytestring,
                       cborg,
                       containers >= 0.5.8,
                       cryptonite >= 0.24,
                       memory,
                       network,
                       random-shuffle,
                       serialise,
                       stm >= 2.4.5.0

  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

  default-extensions:  BangPatterns
                       ExistentialQuantification,
                       FlexibleContexts,
                       GeneralizedNewtypeDeriving,
                       LambdaCase,
                       MultiWayIf,
                       RecordWildCards,
                       ScopedTypeVariables,
                       TupleSections,
                       TypeFamilies,
                       TypeOperators

executable peer-discovery-test

  main-is:             Main.hs

  build-depends:       base < 5,
                       bytestring,
                       cryptonite,
                       peer-discovery,
                       network,
                       pretty-simple,
                       random

  ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-A2m -N4"

  hs-source-dirs:      test
  default-language:    Haskell2010

  default-extensions:  BangPatterns
                       LambdaCase,
                       MultiWayIf,
                       RecordWildCards,
                       ScopedTypeVariables,
                       TupleSections,
                       TypeFamilies
